[project]
name = "chenchen_rl"
version = "0.1.0"
description = ""
authors = [
    {name = "chenenen13",email = "122288399+chenenen13@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "chenchen_rl", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
